--- a/src/componentes/SecaoProdutos/SecaoProdutos.module.css
+++ b/src/componentes/SecaoProdutos/SecaoProdutos.module.css
@@ -1,5 +1,50 @@
-.ul{
+.ul li{
     list-style-type: disc;
     color: black;
-    padding-left: 20px;
+    margin-top: 20px;  
+    list-style-position: inside;
 }
+.section{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1024px;
+    justify-content: center;
+    align-items: center;
+}
+.h2{
+    margin: 80px 0 30px 0;
+}
+.p{
+    margin: 15px 0 35px 0;
+}
+.container_card{
+    display: flex;
+    gap: 20px;
+    flex: 1 1;
+    padding: 20px 10px;
+    border-radius: 7px;
+    flex-wrap: wrap;
+    margin-bottom: 130px;
+}
+.image{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    margin-top: 20px;
+}
+.card{
+    background-color: rgb(239, 236, 236);
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    border-radius: 10px;
+    flex: 1 1 300px; 
+    text-align: center;
+    font-weight: 700;
+}
+.lista{
+    text-align: center;
+}
+
