--- a/src/componentes/SecaoSobre/SecaoSobre.module.css
+++ b/src/componentes/SecaoSobre/SecaoSobre.module.css
@@ -4,6 +4,8 @@
     border-radius: 7px;
     flex-wrap: wrap;
     margin-bottom: 130px;
+    width: 100%;
+    max-width: 824px;
 }
 .image{
     width: 100%;
@@ -13,7 +15,7 @@
 .section{
     display: flex;
     flex-direction: column;
-    margin: 80px auto;
+    margin: 0 auto;
     width: 100%;
     max-width: 1024px;
     justify-content: center;
@@ -23,11 +25,11 @@
     background-color: #F8F7FF;
 }
 .card{
-    height: 30vh;
+    height: 40vh;
     background-color: rgb(239, 236, 236);
     display: flex;
     flex-direction: column;
-    flex: 1 1 300px; 
+    flex: 1 1 280px; 
     width: 11vw;
     text-align: center;
     justify-content: space-around;
