--- a/src/componentes/SecaoSobre/SecaoSobre.module.css
+++ b/src/componentes/SecaoSobre/SecaoSobre.module.css
@@ -43,4 +43,9 @@
     line-height: 40px;
     text-align: center;
 }
+@media(min-width: 300px) and (max-width: 480px){
+    .section{
+        padding: 40px;
+    }
+}
 
