--- a/src/componentes/Topo/Topo.module.css
+++ b/src/componentes/Topo/Topo.module.css
@@ -11,3 +11,23 @@
     padding-left: 20px;
     color: black;
 }
+
+@media(min-width: 300px) and (max-width: 480px){
+    .header{
+        width: 100%;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        height: 24vh;
+    }
+    .image{
+        width: 39vw;
+        height: 6vh;
+    }
+    .link a{
+        font-size: 0.9rem;
+    }
+}
+
+
